--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         /></noscript>
 
         <!-- Primary Meta Tags -->
-        <meta name="title" content="NOVAPRIME - Advanced Trading Platform" />
+        <meta name="title" content="GLOBAL TRADES - Advanced Trading Platform" />
         <meta
             name="description"
-            content="Experience premium trading with NOVAPRIME. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
+            content="Experience premium trading with GLOBAL TRADES. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
         />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://www.novaprime.site/" />
-        <meta property="og:title" content="NOVAPRIME - Advanced Trading Platform" />
+        <meta property="og:url" content="https://www.globaltrades.site/" />
+        <meta property="og:title" content="GLOBAL TRADES - Advanced Trading Platform" />
         <meta
             property="og:description"
-            content="Experience premium trading with NOVAPRIME. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
+            content="Experience premium trading with GLOBAL TRADES. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
         />
-        <meta property="og:image" content="https://www.novaprime.site/tradermasterlogo.png" />
+        <meta property="og:image" content="https://www.globaltrades.site/tradermasterlogo.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
