--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://www.novaprime.site/" />
-        <meta property="twitter:title" content="NOVAPRIME - Advanced Trading Platform" />
+        <meta property="twitter:url" content="https://www.globaltrades.site/" />
+        <meta property="twitter:title" content="GLOBAL TRADES - Advanced Trading Platform" />
         <meta
             property="twitter:description"
-            content="Experience premium trading with NOVAPRIME. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
+            content="Experience premium trading with GLOBAL TRADES. Advanced automated trading strategies with professional-grade tools. Sophisticated, reliable, and designed for serious traders."
         />
-        <meta property="twitter:image" content="https://www.novaprime.site/tradermasterlogo.png" />
+        <meta property="twitter:image" content="https://www.globaltrades.site/tradermasterlogo.png" />
 
         <!-- Additional SEO Meta -->
         <meta
             name="keywords"
-            content="NOVAPRIME, advanced trading platform, professional trading, automated trading, premium trading tools, sophisticated trading bot, institutional trading, NOVAPRIME"
+            content="GLOBAL TRADES, advanced trading platform, professional trading, automated trading, premium trading tools, sophisticated trading bot, institutional trading, global trades"
         />
         <meta name="robots" content="index, follow" />
         <meta name="theme-color" content="#0ccf5a" />
-        <link rel="canonical" href="https://www.novaprime.site/" />
+        <link rel="canonical" href="https://www.globaltrades.site/" />
 
-        <title>NOVAPRIME - Advanced Trading Platform</title>
+        <title>GLOBAL TRADES - Advanced Trading Platform</title>
 
         <!-- Deriv API Script -->
         <script src="https://api.deriv.com/api-base.js" async></script>
